# box3d-rs

./: Cargo.toml  README.md  build.rs  wrapper.h
bevy_box3d/: Cargo.toml  README.md
bevy_box3d/examples/: bevy_car_terrain.rs  bevy_colosseum.rs  bevy_perf.rs  bevy_stack.rs
bevy_box3d/src/: lib.rs
box3d/: Cargo.toml  README.md
box3d/examples/: colosseum_perf.rs  hello.rs  large_pyramid_perf.rs  queries.rs  shapes.rs
box3d/src/: base.rs  bevy.rs  body.rs  callbacks.rs  character.rs  collision.rs  compound.rs  contact.rs  debug_draw.rs  dynamic_tree.rs  error.rs  events.rs  handle.rs  hull.rs  joint.rs  lib.rs  math.rs  mesh.rs  query.rs  recording.rs  shape.rs  tasks.rs  world.rs
src/: lib.rs
