[package]
name = "box3d-sys"
version = "0.1.13"
edition = "2021"
links = "box3d"
description = "Raw Rust FFI bindings for Box3D."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tebarem/box3d-rs"
include = [
    "Cargo.toml",
    "README.md",
    "build.rs",
    "wrapper.h",
    "src/**",
    "vendor/box3d/CMakeLists.txt",
    "vendor/box3d/LICENSE",
    "vendor/box3d/include/**",
    "vendor/box3d/src/**",
]

[workspace]
members = ["box3d"]
resolver = "2"

[features]
default = ["build-from-source"]
build-from-source = ["dep:cmake"]

[dependencies]

[build-dependencies]
bindgen = "0.72"
cmake = { version = "0.1", optional = true }
