[package]
name = "bevy_box3d"
version = "0.1.14"
edition = "2021"
description = "Bevy integration for Box3D."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tebarem/box3d-rs"

[dependencies]
bevy_app = { version = "0.18.1" }
bevy_color = { version = "0.18.1" }
bevy_ecs = { version = "0.18.1" }
bevy_gizmos = { version = "0.18.1" }
bevy_math = { version = "0.18.1" }
bevy_time = { version = "0.18.1" }
bevy_transform = { version = "0.18.1" }
box3d = { path = "../box3d", version = "0.1.14" }

[dev-dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["3d"] }

[[example]]
name = "bevy_stack"
