[package]
name = "bevy_box3d"
version = "0.2.0"
edition = "2021"
rust-version = "1.95"
autoexamples = false
description = "Bevy integration for Box3D."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Tebarem/box3d-rs"

[dependencies]
bevy_app = { version = "0.19.0" }
bevy_color = { version = "0.19.0" }
bevy_ecs = { version = "0.19.0" }
bevy_gizmos = { version = "0.19.0" }
bevy_math = { version = "0.19.0" }
bevy_time = { version = "0.19.0" }
bevy_transform = { version = "0.19.0" }
box3d = { path = "../box3d", version = "0.1.14" }

[dev-dependencies]
bevy = { version = "0.19.0", default-features = false, features = ["3d", "ui"] }

[[example]]
name = "bevy_stack"

[[example]]
name = "bevy_colosseum"

[[example]]
name = "bevy_perf"
